--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   <!-- Servlets -->
   <servlet>
     <servlet-name>greetServlet</servlet-name>
-    <servlet-class>org.vai.hpc.clusterdash.server.GreetingServiceImpl</servlet-class>
+    <servlet-class>org.vai.hpc.clusterdash.server.ClusterInfoServiceImpl</servlet-class>
   </servlet>
   
   <servlet-mapping>
